spacing fixes

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -16,7 +16,7 @@ h1 {
 }
 h2 {
   font-size: 3em;
-  margin-bottom: 50px;
+  margin-bottom: 100px;
 }
 h3 {
   font-size: 1.5em;
